update version num

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Matrix Exponential ODE solver for PK and PBPK models
 Version: 0.2.0
 Author: Hillary R. Husband <hillaryhusband@gmail.com>
 Maintainer: Hillary R. Husband <hillaryhusband@gmail.com>
-Description: Functions in this package can solve ODE systems for PK and PBPK models using matrix manipulations. This function automatically handles real and complex conjugate roots, making it applicable to intricate PBPK models.
+Description: Functions in this package can solve ODE systems for PK and PBPK models using matrix manipulations. This function automatically handles real and complex conjugate roots, making it applicable to intricate PBPK models as well as machine learning applications to traditional PK techniques.
 License: GPL
 Encoding: UTF-8
 LazyData: true
