--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Matrix Exponential ODE solver for PK and PBPK models
 Version: 0.2.3
 Authors@R: c(
        person("Hillary R.", "Husband", "", "hillaryhusband@gmail.com", 
-       c("aut", "cre"), 
+       c("aut", "cre")), 
        person("Hillary R.", "Husband", role =  c("cph"))
        )
 Maintainer: Hillary Husband <hillaryhusband@gmail.com>
